# experimental_design

./: README.md  pyproject.toml
docs/: index.html
docs/experimental_design/: experimental_designs.html
documentation/: experimental_design.html  search.js
examples/: experimental_designs_example.ipynb
experimental_design/: __init__.py  experimental_designs.py
