[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "experimental_design"
dynamic = ["version"]
description = 'Tools to create and manage design of experiments (DOE) or statistical design of experiments.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "sandersa", email = "aric.sanders@nist.gov" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pandas","pyyaml"]

[project.urls]
Documentation = "https://github.com/sandersa-nist/experimental_design#readme"
Issues = "https://github.com/sandersa-nist/experimental_design/issues"
Source = "https://github.com/sandersa-nist/experimental_design"

[tool.hatch.version]
path = "experimental_design/__init__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:experimental_design tests}"

[tool.coverage.run]
source_pkgs = ["experimental_design", "tests"]
branch = true
parallel = true
omit = [
  "experimental_design/__about__.py",
]

[tool.coverage.paths]
experimental_design = ["experimental_design", "*/experimental-design/experimental_design"]
tests = ["tests", "*/experimental-design/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
